add performance test for incremental java build
- new dedicated testcase against java build (bigOldJava, lotDependencies) with daemon enabled.